temp/CACommunity-Salesforce/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Alerts__c</fullName>
        <formula>Trust_Bits_Alert__c &amp; &quot; &quot; &amp; Audit_Date_Reminder_Alert__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alerts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Bug__c</fullName>
        <label>Approval Bug</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Audit_CP_CPS_Alert__c</fullName>
        <formula>IF (AND(Audits_Same_as_Parent__c = FALSE, 
        Standard_Audit__c = NULL,
        BR_Audit__c = NULL,
        EV_Audit__c = NULL), 
    IMAGE(&quot;/resource/Road_Work&quot;, &quot;Road Work&quot;) + &quot;Need Audit Statements&quot;, &quot;&quot;) +

IF (AND( CP_CPS_Same_as_Parent__c  = FALSE, 
         Certificate_Policy_CP_255_char_c__c = NULL,
         Certification_Practice_Stat_CPS_255_char__c = NULL), 
    IMAGE(&quot;/resource/Road_Work&quot;, &quot;Road Work&quot;) + &quot;Need CP/CPS&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit/CP/CPS Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Date_Alert__c</fullName>
        <description>No flag- Standard Audit Statement Date is newer than 1 year ago 
Yellow Flag - Standard Audit Statement Date is older than 12 months, but not more than 18 months old
Red Flag - Standard Audit Statement Date is older than 18 months old, but not more than 2 years old
Exclamation - Standard Audit Statement Date is older than 2 years</description>
        <formula>IF (TODAY() - Standard_Audit_Statement_Date__c &gt; 730, 
   IMAGE(&quot;/servlet/servlet.FileDownload?file=015o0000000GPjY&quot;, &quot;Exclaimation&quot;), 
   IF ( TODAY() - Standard_Audit_Statement_Date__c &gt; 547,
      IMAGE(&quot;/servlet/servlet.FileDownload?file=015o0000000GPkJ&quot;, &quot;Red flag&quot;), 
      IF ( TODAY() - Standard_Audit_Statement_Date__c &gt; 365,
         IMAGE(&quot;/servlet/servlet.FileDownload?file=015o0000000GPkL&quot;, &quot;Yellow flag&quot;), &quot; &quot;
      )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Date Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Date_Reminder_Alert__c</fullName>
        <description>Yellow flag is for &apos;Courtesy reminders&apos; : 1 year plus 30 days to 120 old audit date 
Red flag is for &apos;Overdue reminders&apos;: 1 year plus 120 to 240 days old audit date 
Exclamation is for &apos;Danger of being revoked&apos;: 1 year plus 240 days or older date 
Green flag for audit dates: 1 year to 1 year plus 30 days 
Looks for root records status=Included or change requested. 
** Check standard audit date when Trust bits &lt;&gt; null and &lt;&gt; &quot;all Trust Bits Turned off&quot; 
** Check BR audit date when Trust bits includes &quot;Websites&quot; 
** Check EV audit date when EV Policy OID &lt;&gt; null and not &quot;Not EV&quot;</description>
        <formula>IF ( AND (RecordType.Name = &apos;Root Certificate&apos;, 
Do_NOT_Send_Audit_Reminder__c &lt;&gt; TRUE, 
OR (Status_In_Text__c = &apos;Included&apos;, Status_In_Text__c = &apos;Change Requested&apos;)), 
IF (AND(Today() - Standard_Audit_Statement_Date__c &gt; 365, 
NOT (INCLUDES (Trust_Bits__c, &apos;&apos;)), 
NOT (INCLUDES (Trust_Bits__c, &apos;All Trust Bits Turned Off&apos;))), 
IF (Today() - Standard_Audit_Statement_Date__c &gt; 605, 
IMAGE (&quot;/resource/Exclamation&quot;, &quot;Exclamation&quot;) &amp; &apos; Danger of being revoked Std Audit Dt &gt; 605&apos;, 
IF (Today() - Standard_Audit_Statement_Date__c &gt; 485, 
IMAGE (&quot;/resource/Flag_Red&quot;, &quot;Flag Red&quot;) &amp; &apos; Overdue reminder for Std Audit Dt &gt; 485&apos;, 
IF (Today() - Standard_Audit_Statement_Date__c &gt; 395, 
IMAGE (&quot;/resource/Flag_Yellow&quot;, &quot;Flag Yellow&quot;) &amp; &apos; Courtesy reminder for Std Audit Dt &gt; 395&apos;, 
IMAGE (&quot;/resource/Flag_Green&quot;, &quot;Flag Green&quot;) &amp; &apos; Soon to Expire Std Audit Dt &gt; 365&apos;))), 
IF (AND (Today() - BR_Audit_Statement_Date__c &gt; 365, 
(INCLUDES (Trust_Bits__c, &apos;Websites&apos;))), 
IF (Today() - BR_Audit_Statement_Date__c &gt; 605, 
IMAGE (&quot;/resource/Exclamation&quot;, &quot;Exclamation&quot;) &amp; &apos; Danger of being revoked BR Audit Dt &gt; 605&apos;, 
IF (Today() - BR_Audit_Statement_Date__c &gt; 485, 
IMAGE (&quot;/resource/Flag_Red&quot;, &quot;Flag Red&quot;) &amp; &apos; Overdue reminder for BR Audit Dt &gt; 485&apos;, 
IF (Today() - BR_Audit_Statement_Date__c &gt; 395, 
IMAGE (&quot;/resource/Flag_Yellow&quot;, &quot;Flag Yellow&quot;) &amp; &apos; Courtesy reminder for BR Audit Dt &gt; 395&apos;, 
IMAGE (&quot;/resource/Flag_Green&quot;, &quot;Flag Green&quot;) &amp; &apos; Soon to Expire BR Audit Dt &gt; 365&apos;))), 
IF (AND (Today() - EV_Audit_Statement_Date__c &gt; 365, 
EV_Policy_OID_s__c &lt;&gt; Null, EV_Policy_OID_s__c &lt;&gt; &apos;Not EV&apos;), 
IF (Today() - EV_Audit_Statement_Date__c &gt; 605, 
IMAGE (&quot;/resource/Exclamation&quot;, &quot;Exclamation&quot;) &amp; &apos; Danger of being revoked EV Audit Dt &gt; 605&apos;, 
IF (Today() - EV_Audit_Statement_Date__c &gt; 485, 
IMAGE (&quot;/resource/Flag_Red&quot;, &quot;Flag Red&quot;) &amp; &apos; Overdue reminder for EV Audit Dt &gt; 485&apos;, 
IF (Today() - EV_Audit_Statement_Date__c &gt; 395, 
IMAGE (&quot;/resource/Flag_Yellow&quot;, &quot;Flag Yellow&quot;) &amp; &apos; Courtesy reminder for EV Audit Dt &gt; 395&apos;, 
IMAGE (&quot;/resource/Flag_Green&quot;, &quot;Flag Green&quot;) &amp; &apos; Soon to Expire EV Audit Dt &gt; 365&apos;))), 
&apos;&apos; ) 
) 
) 
,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yellow flag  &apos;Courtesy reminders&apos; : 1 yr plus 30 days to 120 old audit
Red flagr &apos;Overdue reminders&apos;: 1 yr plus 120 to 240 days old audit
Exclamation &apos;Danger of being revoked&apos;: 1 yr plus 240 days or older
Green flag audit dates: 1 yr to 1 yr + 30 days</inlineHelpText>
        <label>Audit Date Reminder Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Remainder_Days__c</fullName>
        <formula>TODAY() - Standard_Audit_Statement_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Remainder Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auditor_Qualifications__c</fullName>
        <description>URL to website attesting to the qualifications of this Auditor to issue the Standard Audit Statement</description>
        <inlineHelpText>URL to website attesting to the qualifications of this Auditor to issue the Standard Audit Statement</inlineHelpText>
        <label>Auditor Qualifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Auditor_Website__c</fullName>
        <description>URL to information about this Auditor</description>
        <inlineHelpText>URL to information about this Auditor</inlineHelpText>
        <label>Auditor Website</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auditor__c</fullName>
        <description>Name of Auditor who issued the Standard Audit Statement</description>
        <inlineHelpText>Name of Auditor who issued the Standard Audit Statement</inlineHelpText>
        <label>Auditor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audits_Same_as_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click this box if audit of parent cert includes this cert. If you click this box do NOT enter data into the other fields in this section.</description>
        <inlineHelpText>Click this box if audit of parent cert includes this cert. If you click this box do NOT enter data into the other fields in this section.</inlineHelpText>
        <label>Audits Same as Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Statement_Date__c</fullName>
        <description>Date BR Audit Statement Issued</description>
        <inlineHelpText>Date BR Audit Statement Issued</inlineHelpText>
        <label>BR Audit Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Type__c</fullName>
        <label>BR Audit Type</label>
        <picklist>
            <picklistValues>
                <fullName>ETSI TS 102 042</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebTrust</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BR_Audit__c</fullName>
        <description>If able to issue SSL/TLS certs, then URL to Baseline Requirements audit statement</description>
        <inlineHelpText>If able to issue SSL/TLS certs, then URL to Baseline Requirements audit statement</inlineHelpText>
        <label>BR Audit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Basic_Constraints__c</fullName>
        <label>Basic Constraints</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CA_Document_Repository__c</fullName>
        <description>URL to where policy documentation specific to this cert may be found</description>
        <inlineHelpText>URL to where policy documentation specific to this cert may be found</inlineHelpText>
        <label>CA Document Repository</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CA_Email_Alias_1__c</fullName>
        <inlineHelpText>CA Email Alias 1 and 2 are used to reach more than one person in your organization tol receive notifications in case the primary contact is out of the office or leaves the organization.</inlineHelpText>
        <label>CA Email Alias 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CA_Email_Alias_2__c</fullName>
        <inlineHelpText>CA Email Alias 1 and 2 are used to reach more than one person in your organization tol receive notifications in case the primary contact is out of the office or leaves the organization.</inlineHelpText>
        <label>CA Email Alias 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CA_Owner_Certificate_No__c</fullName>
        <displayFormat>A{000000}</displayFormat>
        <externalId>true</externalId>
        <label>CA Owner/Certificate No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CA_Owner_ID__c</fullName>
        <description>This field stores the CA Owner ID - top level in hierarchy. It is updated by workflow - field update.</description>
        <inlineHelpText>This field stores the CA Owner ID - top level in hierarchy. It is updated by workflow - field update.</inlineHelpText>
        <label>CA Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Owner_Name__c</fullName>
        <formula>HYPERLINK(Parent.Id, Parent.Name, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Owner_Status__c</fullName>
        <formula>Name + &apos; (Status:&apos; + Status_In_Text__c + &apos;) &apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Owner &amp; Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Owner__c</fullName>
        <description>This field shows the CA Owner - top level in hierarchy.</description>
        <inlineHelpText>This field shows the CA Owner - top level in hierarchy.</inlineHelpText>
        <label>CA Owner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CA_Owner_for_Running_User__c</fullName>
        <formula>$User.CA_Owner_for_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Owner for Running User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_CPS_Same_as_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click this box if this cert does not have separate policy documentation from the parent cert. If you click this box do NOT enter data into the other fields in this section.</description>
        <inlineHelpText>Click this box if this cert does not have separate policy documentation from the parent cert. If you click this box do NOT enter data into the other fields in this section.</inlineHelpText>
        <label>CP/CPS Same as Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRL_URL_s__c</fullName>
        <inlineHelpText>URL(s) at which the CRL(s) may be obtained -- for end-entity certs and for intermediate CAs.</inlineHelpText>
        <label>CRL URL(s)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Issuer_Common_Name__c</fullName>
        <label>Certificate Issuer Common Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Issuer_Organization__c</fullName>
        <label>Certificate Issuer Organization</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Issuer_Organizational_Unit__c</fullName>
        <label>Certificate Issuer Organizational Unit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Name__c</fullName>
        <description>This field is hyperlink to Account Name. Mainly used in reports.</description>
        <formula>HYPERLINK(Id, Name, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certificate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Policy_CP_255_char_c__c</fullName>
        <description>This field shows first 255 characters of long type Certificate Policy (CP)</description>
        <inlineHelpText>This field shows first 255 characters of long type Certificate Policy (CP)</inlineHelpText>
        <label>Certificate Policy (CP)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Policy_CP__c</fullName>
        <description>URL to Certificate Policy documentation specific to this cert</description>
        <inlineHelpText>URL to Certificate Policy documentation specific to this cert</inlineHelpText>
        <label>Certificate Policy (CP)</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Serial_Number__c</fullName>
        <label>Certificate Serial Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Subject_Common_Name__c</fullName>
        <description>&apos;CA Owner/Certificate Name&apos; must be same as &apos;Certificate Subject Common Name&apos;</description>
        <inlineHelpText>&apos;CA Owner/Certificate Name&apos; must be same as &apos;Certificate Subject Common Name&apos;</inlineHelpText>
        <label>Certificate Subject Common Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Subject_Organization_Unit__c</fullName>
        <label>Certificate Subject Organization Unit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Subject_Organization__c</fullName>
        <label>Certificate Subject Organization</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certification_Practice_Stat_CPS_255_char__c</fullName>
        <description>This field shows first 255 characters of long type Certificate Practice(CPS)</description>
        <inlineHelpText>This field shows first 255 characters of long type Certificate Practice(CPS)</inlineHelpText>
        <label>Certification Practice Statement (CPS)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certification_Practice_Statement_CPS__c</fullName>
        <description>URL to CPS specific to this cert</description>
        <inlineHelpText>URL to CPS specific to this cert</inlineHelpText>
        <label>Certification Practice Statement (CPS)</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_by_Mozilla_on_Intermediate__c</fullName>
        <label>Comments by Mozilla on Intermediate</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_by_Mozilla_on_Owner__c</fullName>
        <label>Comments by Mozilla on Owner</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_by_Mozilla_on_Root__c</fullName>
        <label>Comments by Mozilla on Root</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Website_From_Owner_Record__c</fullName>
        <formula>Parent.Company_Website__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Website__c</fullName>
        <inlineHelpText>Website URL</inlineHelpText>
        <label>Company Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Display_PEM_Info_Warning_Message__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Display PEM Info Warning Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Warning_or_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by VF page to display warnings or messages</description>
        <label>Display Warning or Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Webservice_Failed_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Account trigger helper class</description>
        <label>Display Webservice Failed Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Webservice_Not_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Account trigger helper class</description>
        <label>Display Webservice Not Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_NOT_Send_Audit_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, Audit Reminder process will ignore this Root Cert. Only to be used by CA Program Manager.</inlineHelpText>
        <label>Do NOT Send Audit Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_Audit_Statement_Date__c</fullName>
        <description>Date EV Audit Statement Issued</description>
        <inlineHelpText>Date EV Audit Statement Issued</inlineHelpText>
        <label>EV Audit Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EV_Audit_Type__c</fullName>
        <label>EV Audit Type</label>
        <picklist>
            <picklistValues>
                <fullName>ETSI TS 102 042</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebTrust</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EV_Audit__c</fullName>
        <description>If able to issue EV certs, then URL to EV audit statement</description>
        <inlineHelpText>If able to issue EV certs, then URL to EV audit statement</inlineHelpText>
        <label>EV Audit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EV_Policy_OID_s__c</fullName>
        <label>EV Policy OID(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Extended_Key_Usage__c</fullName>
        <label>Extended Key Usage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Extraction_Results__c</fullName>
        <label>Extraction Results</label>
        <length>6000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Firefox_Release_When_First_Included__c</fullName>
        <label>Firefox Release When First Included</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firefox_Release_When_Removed__c</fullName>
        <label>Firefox Release When Removed</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geographic_Focus_255_char__c</fullName>
        <description>This field shows first 255 characters of long type Geographic Focus</description>
        <inlineHelpText>This field shows first 255 characters of long type Geographic Focus</inlineHelpText>
        <label>Geographic Focus</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Geographic_Focus__c</fullName>
        <label>Geographic Focus</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Geographic_Focus_of_Owner__c</fullName>
        <formula>Parent.Geographic_Focus_255_char__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geographic Focus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Usage__c</fullName>
        <label>Key Usage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Case_No__c</fullName>
        <inlineHelpText>Updated by Sync process</inlineHelpText>
        <label>Last Sync Case No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Date_Time__c</fullName>
        <inlineHelpText>Updated by Sync process</inlineHelpText>
        <label>Last Sync Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Management_Assertions_By__c</fullName>
        <description>The name (in English) of the organization who made the management assertions for the standard audit. i.e. The name of the organization that validates the data to be included in certificates signed by this issuer.</description>
        <inlineHelpText>The name (in English) of the organization who made the management assertions for the standard audit. i.e. The name of the organization that validates the data to be included in certificates signed by this issuer.</inlineHelpText>
        <label>Management Assertions By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Match_Running_User_s_Owner__c</fullName>
        <description>Match the Account Name with the Account Name of the Contact (running user). Make exception for Symantec and sister companies.</description>
        <formula>IF (AND (BEGINS (CA_Owner__c, &apos;Symantec&apos;), BEGINS (CA_Owner_for_Running_User__c, &apos;Symantec&apos;)), TRUE,
   IF (CA_Owner__c = CA_Owner_for_Running_User__c, TRUE, FALSE))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match Running User&apos;s Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mozilla_Applied_Constraints__c</fullName>
        <label>Mozilla Applied Constraints</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NSS_Release_When_First_Included__c</fullName>
        <label>NSS Release When First Included</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSS_Release_When_Removed__c</fullName>
        <label>NSS Release When Removed</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCSP_URL_s__c</fullName>
        <label>OCSP URL(s)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organizational_Type__c</fullName>
        <inlineHelpText>Indicates whether the CA is operated by a private or public corporation, government agency, international organization, academic institution or consortium, NGO, etc. In some cases the CA may be of a hybrid type, e.g., a corporation established by govt.</inlineHelpText>
        <label>Organizational Type</label>
        <picklist>
            <picklistValues>
                <fullName>Private Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consortium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NGO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Policy_Documentation__c</fullName>
        <description>Further documentation or information relevant to this cert</description>
        <inlineHelpText>Further documentation or information relevant to this cert</inlineHelpText>
        <label>Policy Documentation</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Previous_CA_Owner__c</fullName>
        <label>Previous CA Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Owner_Change_Date__c</fullName>
        <label>Previous Owner Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Market_Customer_Base__c</fullName>
        <inlineHelpText>Indicates what types of customers does the CA serve?
Are there particular vertical market segments in which it operates?
Does the CA focus its activities on a particular country or other geographic region?</inlineHelpText>
        <label>Primary Market / Customer Base</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Publicly_Disclosed_and_Audited_subCAs__c</fullName>
        <label>Publicly Disclosed &amp; Audited subCAs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RFC_5280_Revocation_Reason_Code__c</fullName>
        <inlineHelpText>Provide the reason for the certificate revocation. Value 7 is not being used.</inlineHelpText>
        <label>RFC 5280 Revocation Reason Code</label>
        <picklist>
            <picklistValues>
                <fullName>(0) unspecified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(1) keyCompromise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) cACompromise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(3) affiliationChanged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(4) superseded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(5) cessationOfOperation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(6) certificateHold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(8) removeFromCRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(9) privilegeWithdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(10) aACompromise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removal_Bug_No_or_Date__c</fullName>
        <label>Removal Bug No. or Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Revocation_Status__c</fullName>
        <label>Revocation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Revoked</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Revoked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added to OneCRL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Root_Cert_Expiration_Alert__c</fullName>
        <description>Check &apos;Valid To&apos; date and set alert flags
- Red flag if it has already expired.
- Purple flag if it expires within one year.
- Yellow flag if it expires within two years.</description>
        <formula>IF (Valid_To_GMT__c - TODAY() &lt; 0, IMAGE(&quot;/servlet/servlet.FileDownload?file=015o0000000GPkJ&quot;, &quot;Red flag&quot;),
   IF (Valid_To_GMT__c - TODAY() &lt; 365, IMAGE(&quot;/servlet/servlet.FileDownload?file=015o0000000GPkH&quot;, &quot;Purple flag&quot;),
       IF (Valid_To_GMT__c - TODAY() &lt; 730, IMAGE(&quot;/servlet/servlet.FileDownload?file=015o0000000GPkL&quot;, &quot;Yellow flag&quot;),
       &quot;&quot;)
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Check &apos;Valid To&apos; date and set alert flags
- Red flag if it has already expired.
- Purple flag if it expires within one year.
- Yellow flag if it expires within two years.</inlineHelpText>
        <label>Root Cert Expiration Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Certificate_Download_URL__c</fullName>
        <label>Root Certificate Download URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Root_Certificate_Name__c</fullName>
        <description>This field is hyperlink to Account Name. Mainly used in reports.</description>
        <formula>HYPERLINK(Id, Name, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Root Certificate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Stores_Included_In__c</fullName>
        <label>Root Stores Included In</label>
        <picklist>
            <picklistValues>
                <fullName>Adobe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mozilla</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Opera</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SHA_1_Fingerprint__c</fullName>
        <label>SHA-1 Fingerprint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SHA_256_Fingerprint__c</fullName>
        <label>SHA-256 Fingerprint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Signature_Algorithm__c</fullName>
        <label>Signature Algorithm</label>
        <picklist>
            <picklistValues>
                <fullName>D2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHA-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHA-256</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHA-384</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHA-512</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signing_Key_Parameters__c</fullName>
        <inlineHelpText>For RSA keys, the modulus length, for example, 2048 or 4096 bits.
For ECC keys, the named curve, for example, NIST Curve P-256, P-384, or P-512.</inlineHelpText>
        <label>Signing Key Parameters</label>
        <picklist>
            <picklistValues>
                <fullName>1024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2048</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4096</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECC P-256</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECC P-384</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECC P-521</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Standard_Audit_Statement_Date__c</fullName>
        <description>Date Audit Statement Issued</description>
        <inlineHelpText>Date Audit Statement Issued</inlineHelpText>
        <label>Standard Audit Statement Date</label>
        <type>Date</type>
    </fields>
</CustomObject>